<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:orientation="vertical"
    tools:context=".accomodation.AccomodationFragment">

    <RelativeLayout
        android:id="@+id/rl_accomo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="180dp">

        <TextView
            android:id="@+id/accomo_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:fontFamily="serif"
            android:text="@string/accomo_fragment"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/user_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accomo_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="serif"
            android:text="@string/preference"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Spinner
            android:theme="@style/spinnerTheme"
            android:id="@+id/accoomo_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_preference"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:dropDownSelector="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/book_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:text="@string/book"
                android:textColor="@color/white" />
        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>